versioned_docs/version-22.2/reference/cluster-properties.mdx
---
title: Cluster Configuration Properties
---

<head>
  <meta
    name="title"
    content="Cluster configuration properties | Redpanda Docs"
  />
  <meta name="description" content="Cluster configuration properties list." />
  <link rel="canonical" href="https://docs.redpanda.com/docs/reference/cluster-properties/" />
</head>

Cluster configuration properties are properties that are the same for all nodes in a cluster, and can be set at the cluster level. 
For information on how to edit cluster properties, refer to [Configuring Cluster Properties](../../cluster-administration/cluster-property-configuration).

All cluster properties are presented in tables that are grouped into the following categories:

- [Admin](#admin)
- [Cloud Storage](#cloud-storage)
- [Cluster management](#cluster-management)
- [Kafka API (consumers, producers, and servers)](#kafka-api-consumers-producers-and-servers)
- [Metrics](#metrics)
- [Raft](#raft)
- [Storage (logs, segments, and any information written to disk)](#storage-logs-segments-and-any-information-written-to-disk)
- [Support](#support)
- [Topics and Partitions](#topics-and-partitions)
- [Transactions](#transactions)
- [Wasm](#wasm)

### Admin

| Property | Description | Restart Required |
| :------  | :---------  | :--------------- |
| admin_api_require_auth | Whether admin API clients must provide HTTP Basic authentication headers. <br/><br/>Default: false | No |
| superusers | List of superuser usernames. <br/><br/>Default: Null | No |

### Cloud Storage
| Property | Description | Restart Required |
| :------  | :---------  | :--------------- |
| cloud_storage_access_key | AWS or GCP access key. <br/><br/>Default: Null | Yes |
| cloud_storage_api_endpoint | Optional API endpoint. <br/><br/>Default: Null | Yes |
| cloud_storage_api_endpoint_port | TLS port override. <br/><br/>Default: 443 | Yes |
| cloud_storage_bucket | AWS or GCS bucket that should be used to store data. <br/><br/>Default: Null | Yes |
| cloud_storage_cache_size | Max size of archival cache. <br/><br/>Default: 20971520000 (20 GB) | Yes |
|cloud_storage_credentials_source | The source of credentials used to connect to cloud services. <br/><br/>Default: config_file | Yes |
| cloud_storage_disable_tls | Disable TLS for all S3 or GCS connections. <br/><br/>Default: false | Yes |
| cloud_storage_enabled | Enable archival storage. _This property must be enabled in order to use [Tiered Storage](../../data-management/tiered-storage/) or Remote Read Replicas._ <br/><br/>Default: false | Yes |
| cloud_storage_max_connections | Max number of simultaneous uploads to S3 or GCS. <br/><br/>Default: 20 | Yes |
| cloud_storage_region | AWS or GCP region that houses the bucket used for storage. <br/><br/>Default: Null | Yes |
| cloud_storage_secret_key | AWS or GCP secret key. <br/><br/>Default: Null | Yes |
| cloud_storage_trust_file | Path to certificate that should be used to validate server certificate during TLS handshake. <br/><br/>Default: Null | Yes |

### Cluster management

| Property | Description | Restart Required |
| :------  | :---------  | :--------------- |
| cluster_id | Cluster identifier. <br/><br/>Default: Null | No |
| enable_auto_rebalance_on_node_add | Enable automatic partition rebalancing when new nodes are added. <br/><br/>Default: false | No |
| enable_leader_balancer | Enable automatic leadership rebalancing. <br/><br/>Default: true | No |
| enable_rack_awareness | Enable rack-aware replica assignment. <br/><br/>Default: false | No |

### Kafka API (consumers, producers, and servers)

| Property | Description | Restart Required |
| :------  | :---------  | :--------------- |
| enable_idempotence | Enable idempotent producer. <br/><br/>Default: true | Yes |
| enable_sasl | Enable SASL authentication for Kafka connections. <br/><br/>Default: false | No |
| fetch_max_bytes | Maximum number of bytes returned in fetch request. <br/><br/>Default: 57671680 (55 MB) | No |
| group_max_session_timeout_ms | The maximum allowed session timeout for registered consumers. Longer timeouts give consumers more time to process messages in between heartbeats at the cost of a longer time to detect failures. <br/><br/>Default: 300000 | No |
| group_min_session_timeout_ms | The minimum allowed session timeout for registered consumers. Shorter timeouts result in quicker failure detection at the cost of more frequent consumer heartbeating which can overwhelm broker resources. <br/><br/>Default: 6000 | No |
| kafka_connection_rate_limit | Maximum connections per second for one core. <br/><br/>Default: Null <br/>Minimum = 1 | Yes |
| kafka_connection_rate_limit_overrides | Overrides for specific IP addresses for maximum connections per second for one core. <br/><br/>Default: Null | No |
| kafka_group_recovery_timeout_ms | Kafka group recovery timeout expressed in milliseconds (ms). <br/><br/>Default: 30000 | No |
| kafka_qdc_enable | Enable kafka queue depth control. <br/><br/>Default: false | Yes |
| kafka_qdc_max_latency_ms | Maximum latency threshold for kafka queue depth control depth tracking. <br/><br/>Default: 80 | Yes |
| rm_sync_timeout_ms | Time to wait state catch up before rejecting a request. <br/><br/>Default: 10000 | Yes |
| rpc_server_listen_backlog | TCP connection queue length for Kafka server and internal RPC server. <br/><br/>Default: nil <br/>Minimum = 1 | Yes |
| rpc_server_tcp_recv_buf | TCP receive buffer size in bytes. <br/><br/>Default: nil <br/>Minimum = 32768 (32 KB) | Yes |
| rpc_server_tcp_send_buf | TCP transmit buffer size in bytes. <br/><br/>Default: nil <br/>Minimum = 32768 (32 KB) | Yes |
| target_quota_byte_rate | Target quota byte rate, in bytes per second. <br/><br/>Default: 2097152000 (2 GB) <br/>Minimum = 1048576 (1 MB) | No |


### Metrics

| Property | Description | Restart Required |
| :------  | :---------  | :--------------- |
| disable_metrics | Disable registering metrics exposed on the internal metrics endpoint (/metrics). <br/><br/>Default: false | Yes |
| disable_public_metrics | Disable registering metrics exposed on the public metrics endpoint (/public_metrics). <br/><br/>Default: false | Yes |
| enable_metrics_reporter | Enable cluster metrics reporter. If `true`, the metrics reporter collects and exports to Redpanda Data a set of customer usage metrics. <br/><br/>Default: true | No |

### Raft

| Property | Description | Restart Required |
| :------  | :---------  | :--------------- |
| raft_learner_recovery_rate | Raft learner recovery rate limit in bytes per sec. <br/><br/>Default: 104857600 (100 MB) | Yes |

### Storage (logs, segments, and any information written to disk)

| Property | Description | Restart Required |
| :------  | :---------  | :--------------- |
| delete_retention_ms | Delete segments older than this age, expressed in milliseconds (ms). <br/><br/>Default: 604800000 (1 week) | No |
| log_cleanup_policy | Default topic cleanup policy. <br/><br/>Default: delete | No |
| log_compaction_interval_ms | How often we trigger background compaction. <br/><br/>Default: 10000 | No |
| log_compression_type | Default topic compression type. Possible types are gzip, snappy, lz4, zstd, producer, and none. <br/><br/>Default: Producer | No |
| log_message_timestamp_type | Default timestamp type for topic messages. Possible types are CreateTime and LogAppendTime. <br/><br/>Default: CreateTime | No |


### Support

| Property | Description | Restart Required |
| :------  | :---------  | :--------------- |
| metrics_reporter_url | The URL of the cluster metrics reporter. <br/><br/>Default: https://m.rp.vectorized.io/v2 | N/A |

### Topics and Partitions

| Property | Description | Restart Required |
| :------  | :---------  | :--------------- |
| auto_create_topics_enabled | Allow topic auto creation. <br/><br/>Default: false | No |
| default_topic_partitions | Default number of partitions per topic. <br/><br/>Default: 1 | No |
| default_topic_replications | Default replication factor for new topics. <br/><br/>Default: 1 | No |
| id_allocator_replication | Replication factor for an id allocator topic. <br/><br/>Default: 1 | No |
| internal_topic_replication_factor | Target replication factor for internal topics. <br/><br/>Default: 3 | No |
| retention_bytes | Default maximum number of bytes per partition on disk before triggering a compaction. <br/><br/>Default: Null | No |
| rm_violation_recovery_policy | Describes how to recover from an invariant violation on the partition level. Choices are crash and best_effort. <br/><br/>Default: 0 <br/><br/><b>This feature is in tech preview and is not supported in production environments.</b>| Yes |


### Transactions

| Property | Description | Restart Required |
| :------  | :---------  | :--------------- |
| enable_transactions | Enable transactions. <br/><br/>Default: false | Yes |
| seq_table_min_size | Minimum size of the seq table that is not affected by compaction. <br/><br/>Default: 1000 |
| tm_sync_timeout_ms | Time to wait state catch up before rejecting a request, expressed in milliseconds (ms). <br/><br/>Default: 10000 | Yes |
| tm_violation_recovery_policy | Describes how to recover from an invariant violation at the transaction coordinator level. Choices are crash and best_effort. <br/><br/>Default: crash | Yes |
| transaction_coordinator_cleanup_policy | Cleanup policy for a transaction coordinator topic. Choices are compact and delete. <br/><br/>Default: delete | No |
| transaction_coordinator_delete_retention_ms | Delete segments older than this age (in ms). <br/><br/>Default: 604800000 (1 week) | No |
| transaction_coordinator_replication | Replication factor for a transaction coordinator topic. <br/><br/>Default: 1 | No |
| transactional_id_expiration_ms | Producer IDs expire once this amount of time has elapsed after the last write with the given producer id. <br/><br/>Default: 604800000 | Yes |
| tx_timeout_delay_ms | Delay before scheduling the next check for timed out transactions. <br/><br/>Default: 1000 |

### Wasm

| Property | Description | Restart Required |
| :------  | :---------  | :--------------- |
| enable_coproc | Enable coprocessing mode. <br/><br/>Default: false <br/><br/><b>This feature is in tech preview and is not supported in production environments.</b>| Yes |

---
## Suggested reading

- Fast distributed transactions with Redpanda [article](https://redpanda.com/blog/fast-transactions/)